<resources>
    <string name="app_name">Open Mobile CRM</string>
    <string name="action_settings">Configuración</string>
    <string name="hello_world">Hola Mundo!</string>
    <string name="menu_settings">Configuración</string>
    <string name="splash_description">Open Mobile CRM</string>
    <string name="login_foot_test">Clik aquí para probar la aplicación</string>
    <string name="login_head_superior">Open Mobile</string>
    <string name="login_head_inferior">CRM</string>
    <string name="login_head_all">Open Mobile CRM</string>
    <string name="login_footer">Todos los derechos reservados por Open Mobile CRM</string>
    <string name="login_url">Url del civicrm</string>
    <string name="login_key_site">Key del site</string>
    <string name="login_user_name">Nombre usuario</string>
    <string name="login_user_password">Password</string>
    <string name="login_button_login">Acceder sistema</string>
    <string name="login_error_url_obligatoria">La url es un campo obligatorio</string>
    <string name="login_error_url_novalida">La url introducida no es valida</string>
    <string name="login_error_sitekey_obligatoria">La site key es un campo obligatorio</string>
    <string name="login_error_user_obligatoria">El usuario es un campo obligatorio</string>
    <string name="login_error_password_obligatoria">La password es un campo obligatorio</string>
    <string name="login_validando_title">Validando &#8230;</string>
    <string name="login_validando_msg">Por favor espere &#8230;</string>
    <string name="login_validando_ok_title">Validación correcta</string>
    <string name="login_validando_ok_msg">Bienvenido a OPEN MOBILE CRM</string>
    <string name="login_validando_ok_button">Aceptar</string>
    <string name="login_validando_ko_title">Validación no valida</string>
    <string name="login_validando_ko_msg">Alguno de los campos introducidos no es valido</string>
    <string name="login_validando_ko_button">Aceptar</string>
    <string name="login_validando_error_title">Error validando</string>
    <string name="login_validando_error_msg">Alguno de los campos introducidos no es valido</string>
    <string name="login_validando_error_button">Aceptar</string>
    <string name="login_validando_error_drupal_msg">No se ha podido autenticar en el portal</string>
    <string name="login_validando_drupal_ko_msg">Alguno de los campos introducidos en el portal no son validos</string>
    <string name="login_validando_error_ufmatch_msg">No se ha podido obtener su usuario. Contacte Administrador</string>
    <string name="button_exit">Salir</string>
    <string name="home_contactos">Contactos</string>
    <string name="home_actividades">Actividades</string>
    <string name="home_eventos">Eventos</string>
    <string name="home_informes">Informes</string>
    <string name="home_settings">Configuracion</string>
    <string name="home_acercade">Acerca de</string>
    <string name="acerca_de_label">Acerca De</string>
    <string name="acerca_de_texto">Aplicación creada por Roberto, Jorge, Gonzalo y Fernando como proyecto final</string>
    <string name="acerca_de_boton">Aceptar</string>
    <string name="preferencias_label">Configuracion</string>
    <string name="pref_title_acceso">DATOS ACCESO CIVICRM</string>
    <string name="pref_title_usuario">DATOS USUARIO</string>
    <string name="pref_title_generales">DATOS GENERALES</string>
    <string name="pref_url_title">URL de acceso a CIVICRM</string>
    <string name="pref_url_summary">Conexion con la uri aquí indicada</string>
    <string name="pref_keysite_title">KEY del site proporcionada por un administrador</string>
    <string name="pref_keysite_summary">Necesaria para establecer la conexión</string>
    <string name="pref_user_title">Nombre de usuario en el CIVICRM</string>
    <string name="pref_user_summary">Necesaria para establecer la conexión</string>
    <string name="pref_password_title">Password del usuario</string>
    <string name="pref_password_summary">Necesaria para establecer la conexión</string>
    <string name="pref_apikey_title">API KEY del servidor</string>
    <string name="pref_apikey_summary">Necesaria para establecer la conexión</string>
    <string name="pref_userkey_title">USER KEY del usuario introducido</string>
    <string name="pref_userkey_summary">Necesaria para establecer la conexión</string>
    <string name="pref_mail_title">Mail del usuario registrado</string>
    <string name="pref_mail_summary">Necesaria para obtenes actividades del usuario</string>
    <string name="pref_idcontact_title">Id del contacto en CiviCrm</string>
    <string name="pref_idcontact_summary">Necesaria para obtener informacion del CRM</string>
    <string name="pref_title_sync">SINCRONIZACION</string>
    <string name="pref_synchoursexecution_title">Repetición</string>
    <string name="pref_synchoursexecution_summary">Cada cuantas horas se ejecuta el proceso de sincronización</string>
    <string name="pref_syncusers_title">Usuarios</string>
    <string name="pref_syncusers_summary">Cuantos usuarios se van a exportar a la agenda de contactos</string>
    <string name="pref_checkbox_title">Activar Sincronización</string>
    <string name="pref_checkbox_summary">Sincronizar tu agenda con civicrm</string>
    <string name="pref_testingcontrol_label">Acceso en Pruebas</string>
    <string name="pref_testingcontrol_texto">Esta sección no esta permitida su acceso en modo pruebas. Cierre la aplicación en el botón superior de la barra y autentiquese</string>
    <string name="pref_testingcontrol_boton">Aceptar</string>
    <string name="progress_bar_msg_generico">Cargando&#8230;</string>
    <string name="title_activity_contact_list">Listado contactos</string>
    <string name="title_activity_contact_details">Detalle Contacto</string>
    <string name="contact_image">Contacto</string>
    <string name="search">Buscar</string>
    <string name="address">Direcciones</string>
    <string name="communication_preferences">Comunicación</string>
    <string name="demographics">Demografía</string>
    <string name="constituent_information">Otra Información</string>
    <string name="tags_and_groups">Etiquetas y grupos</string>
    <string name="contact_activities">Actividades</string>
    <string name="email_detail">Correo electrónico</string>
    <string name="email_detail_ppal">Correo electrónico principal</string>
    <string name="telephone_detail">Teléfono</string>
    <string name="address_literal">Address</string>
    <string name="groups_literal">Grupos</string>
    <string name="tags_literal">Etiquetas</string>
    <string name="activity_assigned_literal">Asignada a mi</string>
    <string name="activity_target_literal">Objetivo</string>
    <string name="activity_created_literal">Creada por mi</string>
    <string name="telephone_detail_ppal">Teléfono principal</string>
    <string name="do_not_phone">No llamar</string>
    <string name="do_not_trade">No ventas</string>
    <string name="do_not_email">No enviar correos</string>
    <string name="do_not_sms">No enviar mensajes SMS</string>
    <string name="gender_detail">Género</string>
    <string name="birthdate_detail">Cumpleaños</string>
    <string name="deceased_detail">Contacto difunto</string>
    <string name="language_detail">Lenguaje preferente</string>
    <string name="since_detail">Desde</string>
    <string name="by_detail">por</string>
    <string name="title_activity_add_contact">Crear Contacto</string>
    <string name="add_contact">Nuevo contacto</string>
    <string name="add_contact_name_hint">Nombre del contacto</string>
    <string name="add_contact_email_hint">Email del contacto</string>
    <string name="add_contact_phone_hint">Teléfono del contacto</string>
    <string name="add_contact_create_btn">Crear</string>
    <string name="title_activity_list_contacts_activities">Listado Actividades Contactos</string>
    <string name="mail_no_valido">Formato de e-mail no válido</string>
    <string name="telefono_invalido">El número de teléfono tiene un formato no válido</string>
    <string name="sin_informar_nombre">Debe introducir al menos el nombre del contacto</string>
    <string name="progress_bar_creando">Creando &#8230;</string>
    <string name="error_creando_contacto">Error al crear el contacto. Inténtelo de nuevo más tarde</string>
    <string name="contacto_creado">Contacto creado, ID </string>
    <string name="title_activity_calendario">Calendario</string>
    <string name="sunday">Dom.</string>
    <string name="monday">Lun.</string>
    <string name="tuesday">Mar.</string>
    <string name="wednesday">Mie.</string>
    <string name="thursday">Jue.</string>
    <string name="friday">Vie.</string>
    <string name="saturday">Sab.</string>
    <string name="weekOf">Semana de</string>
    <string name="menu_sybunt_report">SYBUNT</string>
    <string name="menu_activity_resolution_report">Resolución de actividades</string>
    <string name="title_activity_sybunt_report">Reporte SYBUNT</string>
    <string name="title_activity_report_selector">Informes</string>
    <string name="general_http_error">Hubo un error al contactar con el servidor. Inténtelo de nuevo más tarde</string>
    <string name="error_cargar_informe">Hubo un error al cargar el informe. Inténtelo de nuevo más tarde</string>
    <string name="progress_bar_calculando">Calculando &#8230;</string>
    <string name="title_activity_activity_resolution_column_chart">Resolución actividades</string>
    <string name="sync_title_company">Organización</string>
    <string name="sync_title_notification">Open Mobile CRM</string>
    <string name="sync_text_notification_ok">Los Contactos han sido sincronizados</string>
    <string name="sync_text_notification_ko">La sincronización no ha podido ser realizada.</string>
    <string name="sync_ko_rest_notification">CiviCrm parece no tener los servicios de contactos disponibles. Pongase en contacto con el administrador</string>
    <string name="sync_error_notification">La sincronización no ha podido ser realizada. Pongase en contacto con el administrador</string>
    <string name="sync_ok_notification">La sincronización ha sido realizada. Se ha tardado </string>
    <string name="sync_internet_notification">La sincronización no ha podido ser realizada por no disponer conexión internet</string>
    <string name="sync_ok_min_notification">minutos</string>
    <string name="sync_preferencias_all">Todos</string>
    <string name="sync_preferencias_horas_title">Intervalo Ejecución</string>
    <string name="sync_preferencias_horas_summary">Intervalo en el que se ejecuta la sincronización</string>
    <string name="sync_preferencias_users_title">Contactos Exportar</string>
    <string name="sync_preferencias_users_summary">Contactos a incluir en la agenda</string>
    <string name="error_no_internet">PARA HACER USO DE ESTA APLICACIÓN ES NECESARIO TENER UNA CONEXIÓN DE INTERNET.</string>
    <string name="description_image_nointernet">Se requiere acceso a internet</string>
    <string name="sin_eventos">Actualmente no está registrado en ningún evento.</string>
    <string name="title_activity_events_list">Mis Eventos</string>
    <string name="incoming_call">Llamada del cliente: </string>
    <string name="outgoing_call">Llamada al cliente: </string>
    <string name="activities"> Actividades</string>
    <string name="activity"> Actividad</string>
    <string name="activity_dialog_title">Detalle de la Actividad</string>
    <string name="detail">Detalle:</string>
</resources>